--- a/summary_report/DATS6101_Team5_summary_report.rmd
+++ b/summary_report/DATS6101_Team5_summary_report.rmd
@@ -26,7 +26,7 @@ output: html_document
 ## 4.1 Temporal Analysis
 ### 4.1.1 Exploratory Data Analysis (EDA)
 
-### 4.1.2 Research Question/Hypothesi Development
+### 4.1.2 Research Question/Hypothesis Development
 - How did your question change, if at all, after Exploratory Data Analysis? 
 - Based on EDA can you begin to sketch out an answer to your question?
 
