--- a/Final_Project/DATS6101_Final_Proj.Rmd
+++ b/Final_Project/DATS6101_Final_Proj.Rmd
@@ -148,160 +148,120 @@ for (col in selected_columns) {
 }
 ```
 
-4. What temporal patterns exist in rise and fall of song popularity?
-### Temporal Analysis
+### 2. How do musical preferences (song attributes or artists) vary across countries and regions?
 
-##Temporal Trends in Song Popularity
-#Aggregate Average Popularity Over Time
+#### 2.1 Data Preparation for Clustering 
+
 ```{r}
-# Aggregated average popularity over time
-popularity_trend <- df_cleaned %>%
-  group_by(snapshot_date) %>%
-  summarize(avg_popularity = mean(popularity, na.rm = TRUE))
 
-# Plot average popularity trend over time
-ggplot(popularity_trend, aes(x = snapshot_date, y = avg_popularity)) +
-  geom_line(color = "blue") +
-  labs(title = "Trend in Average Song Popularity Over Time",
-       x = "Snapshot Date", y = "Average Popularity") +
-  theme_minimal()
-```
+spotify_df <- df_cleaned
 
-# Seasonal analysis: popularity by month
-```{r}
-df_cleaned <- df_cleaned %>%
-  mutate(month = as.integer(format(snapshot_date, "%m")))
-
-monthly_trend <- df_cleaned %>%
-  group_by(month) %>%
-  summarize(avg_popularity = mean(popularity, na.rm = TRUE))
-
-ggplot(monthly_trend, aes(x = factor(month), y = avg_popularity)) +
-  geom_bar(stat = "identity", fill = "lightblue") +
-  labs(title = "Average Popularity by Month", x = "Month", y = "Average Popularity") +
-  theme_minimal()
-```
-
-# Duration of songs in the Top 50
-```{r}
-df_cleaned <- df_cleaned %>%
-  group_by(name, artists) %>% 
-  summarize(first_appearance = min(as.Date(snapshot_date)),
-            last_appearance = max(as.Date(snapshot_date))) %>%
-  mutate(duration_in_top50 = as.numeric(last_appearance - first_appearance))
-
-ggplot(df_cleaned, aes(x = duration_in_top50)) +
-  geom_histogram(fill = "orange", bins = 30) +
-  labs(title = "Distribution of Song Duration in the Top 50",
-       x = "Duration (days)", y = "Count of Songs") +
-  theme_minimal()
-```
-
-### Advanced Analysis
-
-# Time series decomposition
-```{r}
-time_series_data <- df_cleaned %>%
-  group_by(first_appearance) %>%
-  summarize(avg_popularity = mean(duration_in_top50, na.rm = TRUE)) 
-
-popularity_ts <- ts(time_series_data$avg_popularity, start = c(2017, 1), frequency = 12) 
-decomposed <- decompose(popularity_ts)
-plot(decomposed)
-
-```
-# ANOVA: Release year vs. Popularity
-```{r}
-df_with_release_date <- top_songs %>% 
-  mutate(
-    album_release_date = as.Date(album_release_date, format = "%Y-%m-%d"), 
-    release_year = as.numeric(format(album_release_date, "%Y"))  
-  )
-anova_test <- aov(popularity ~ release_year, data = df_with_release_date)
-summary(anova_test)
-
-
-yearly_popularity <- df_with_release_date %>%
-  group_by(release_year) %>%
-  summarize(avg_popularity = mean(popularity, na.rm = TRUE))
-
-# line plot
-ggplot(yearly_popularity, aes(x = as.numeric(release_year), y = avg_popularity)) +
-  geom_line(size = 1, color = "blue") +
-  geom_point(size = 2, color = "red") +
-  labs(
-    title = "Average Song Popularity by Release Year",
-    x = "Release Year",
-    y = "Average Popularity"
-  ) +
-  theme_minimal()
-
-```
-
-
-# Correlation: Days since release and popularity
-```{r}
-df_for_correlation <- top_songs %>%
-  mutate(
-    snapshot_date = as.Date(snapshot_date), 
-    album_release_date = as.Date(album_release_date), 
-    days_since_release = as.numeric(snapshot_date - album_release_date) 
+# Summarize attributes by country
+country_summary <- spotify_df %>%
+  group_by(country) %>%
+  summarize(
+    avg_acousticness = mean(acousticness, na.rm = TRUE),
+    avg_danceability = mean(danceability, na.rm = TRUE),
+    avg_valence = mean(valence, na.rm = TRUE),
+    avg_energy = mean(energy, na.rm = TRUE),
+    avg_loudness = mean(loudness, na.rm = TRUE),
+    avg_instrumentalness = mean(instrumentalness, na.rm = TRUE),
+    avg_tempo = mean(tempo, na.rm = TRUE),
+    avg_liveness = mean(liveness, na.rm = TRUE)
   )
 
-# Perform Pearson correlation test between days_since_release and popularity
-cor_test <- cor.test(df_for_correlation$days_since_release, df_for_correlation$popularity, method = "pearson")
-print(cor_test)
+country_data_scaled <- scale(country_summary %>% select(-country))
+
 ```
 
+#### K-Means Clustering
 
-# K-means clustering: Popularity trajectories
 ```{r}
-popularity_matrix <- top_songs %>%
-  group_by(name, artists, snapshot_date) %>%
-  summarize(avg_popularity = mean(popularity, na.rm = TRUE), .groups = "drop") %>%
-  pivot_wider(names_from = snapshot_date, values_from = avg_popularity, values_fill = 0)
+library(factoextra)
 
+# Elbow method to find optimal number of clusters
+fviz_nbclust(country_data_scaled, kmeans, method = "wss") +
+  labs(title = "Elbow Method for Optimal Clusters")
 
-numeric_matrix <- popularity_matrix %>%
-  select(-name, -artists) 
+# Set optimal number of clusters
 set.seed(123)
-kmeans_result <- kmeans(scale(numeric_matrix), centers = 3)
+k_optimal <- 5  # Change this to 4 if you'd like to explore fewer clusters
+kmeans_result <- kmeans(country_data_scaled, centers = k_optimal)
 
-# Add cluster assignments back to the original data
-popularity_matrix$cluster <- as.factor(kmeans_result$cluster)
+# Add cluster labels to the original dataset
+country_summary$cluster <- as.factor(kmeans_result$cluster)
 
-# Reshape the data back to long format for plotting
-popularity_long <- popularity_matrix %>%
-  pivot_longer(
-    cols = -c(name, artists, cluster),  
-    names_to = "snapshot_date",       
-    values_to = "avg_popularity"        
-  )
-
-# Convert snapshot_date back to Date format if necessary
-popularity_long$snapshot_date <- as.Date(popularity_long$snapshot_date)
-
-popularity_summary <- popularity_long %>%
-  group_by(snapshot_date, cluster) %>%
-  summarize(avg_popularity = mean(avg_popularity, na.rm = TRUE), .groups = "drop")
-
-# Create a scatter plot with smooth trend lines
-ggplot(popularity_summary, aes(x = snapshot_date, y = avg_popularity, color = cluster)) +
-  geom_point(alpha = 0.6) +  # Scatter points for average popularity
-  geom_smooth(method = "loess", se = FALSE) +  # Smooth trend lines
-  labs(
-    title = "Average Popularity Trends by Cluster",
-    x = "Snapshot Date",
-    y = "Average Popularity"
-  ) +
-  theme_minimal() +
-  theme(legend.position = "bottom")
 ```
 
+#### PCA Plot
 
-
-# T-test: Global vs. regional popularity
 ```{r}
-t_test <- t.test(popularity ~ country == "Global", data = top_songs, alternative = "two.sided")
-print(t_test)
+library(factoextra)
+
+# Visualize PCA with clusters
+fviz_pca_ind(prcomp(country_data_scaled), 
+             geom.ind = "point", 
+             col.ind = country_summary$cluster, 
+             palette = "jco", 
+             addEllipses = TRUE, 
+             legend.title = "Cluster") +
+  labs(title = "PCA Plot of Clusters")
 ```
+
+```{r}
+# Load world map and merge with clustering results
+library(rnaturalearth)
+library(rnaturalearthdata)
+library(ggplot2)
+library(RColorBrewer)
+
+# Create a mapping table for country codes and names
+country_mapping <- data.frame(
+  code = c("AE", "AR", "AT", "AU", "BE", "BG", "BO", "BR", "BY", "CA", 
+           "CH", "CL", "CO", "CR", "CZ", "DE", "DK", "DO", "EC", "EE", 
+           "EG", "ES", "FI", "FR", "GB", "Global", "GR", "GT", "HK", 
+           "HN", "HU", "ID", "IE", "IL", "IN", "IS", "IT", "JP", "KR", 
+           "KZ", "LT", "LU", "LV", "MA", "MX", "MY", "NG", "NI", "NL", 
+           "NO", "NZ", "PA", "PE", "PH", "PK", "PL", "PT", "PY", "RO", 
+           "SA", "SE", "SG", "SK", "SV", "TH", "TR", "TW", "UA", "UY", 
+           "VE", "VN", "ZA"),
+  name = c("United Arab Emirates", "Argentina", "Austria", "Australia", "Belgium", "Bulgaria","Bolivia", "Brazil", "Belarus", "Canada", "Switzerland", "Chile", "Colombia","Costa Rica", "Czechia", "Germany", "Denmark", "Dominican Republic", "Ecuador", "Estonia", "Egypt", "Spain", "Finland", "France", "United Kingdom", "Global", "Greece", "Guatemala", "Hong Kong", "Honduras", "Hungary", "Indonesia", "Ireland", "Israel", "India", "Iceland", "Italy", "Japan", "South Korea", "Kazakhstan", "Lithuania", "Luxembourg", "Latvia", "Morocco", "Mexico", 
+"Malaysia", "Nigeria", "Nicaragua", "Netherlands", "Norway", "New Zealand","Panama", "Peru", "Philippines", "Pakistan", "Poland", "Portugal", "Paraguay", "Romania", "Saudi Arabia", "Sweden", "Singapore", "Slovakia", "El Salvador", "Thailand", "Turkey", "Taiwan", "Ukraine", "Uruguay", "Venezuela", "Vietnam", "South Africa"))
+
+# Merge country_summary with the mapping table
+country_summary <- country_summary %>%
+  left_join(country_mapping, by = c("country" = "code"))
+
+# Check the result
+head(country_summary)
+
+# Standardizing country names
+library(countrycode)
+country_summary$country <- countrycode(country_summary$country, 
+                                       origin = "country.name", 
+                                       destination = "country.name")
+
+# Load world map data
+world <- ne_countries(scale = "medium", returnclass = "sf")
+
+# Merge clustering results with world map
+world_clusters <- world %>%
+  left_join(country_summary, by = c("name" = "name"))
+
+# Plot the world map with clusters
+ggplot(data = world_clusters) +
+  geom_sf(aes(fill = cluster)) +
+  scale_fill_brewer(palette = "Spectral", na.value = "grey80") +
+  labs(title = "Clusters of Countries by Musical Preferences", fill = "Cluster") +
+  theme_minimal()+ 
+  theme(
+    panel.background = element_rect(fill = "lightblue"),  # Add a light blue background
+    plot.title = element_text(size = 16, face = "bold"),
+    legend.title = element_text(size = 12),
+    legend.text = element_text(size = 10)
+)
+```
+
+#### Summary characteristics for clusters
+
+
